# software-3d-renderer

./: CMakeLists.txt  README.md
contrib/ogg/lib/: ogg.lib
contrib/openal-soft/lib/: OpenAL32.lib
contrib/vorbis/lib/: vorbis.lib  vorbisenc.lib  vorbisfile.lib
data/models/bl1/: bl1.blend
data/models/re_hall/: re_house_baked.mtl
data/models/skybox_night/: skybox.blend  skybox.mtl
models/bl1/: bl1.blend  bl1.mtl
models/bongo/: bongo.blend  bongo.mtl
scripts/: bake.py
src/blood/: BongoCat.cpp  BongoCat.h  BongoScreen.cpp  BongoScreen.h  Fade.cpp  Fade.h  GameScreen.cpp  GameScreen.h  HitBox.cpp  HitBox.h  Pickup.cpp  Pickup.h  Player.cpp  Player.h  SkyBox.cpp  SkyBox.h  Zombie.cpp  Zombie.h  main.cpp
src/example/: main.cpp
src/net_platform/: net_platform.sln
src/net_platform/game/: game.vcxproj  game.vcxproj.filters
src/net_platform/native/: native.cpp  native.vcxproj  native.vcxproj.filters
src/net_platform/net_platform/: Program.cs  net_platform.csproj
src/net_platform/net_platform/Properties/: AssemblyInfo.cs
src/net_platform/qplatform/: qplatform.vcxproj  qplatform.vcxproj.filters
src/net_platform/qsoft/: qsoft.vcxproj  qsoft.vcxproj.filters
src/qplatform/: Audio.cpp  Audio.h  BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  Component.cpp  Component.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  Exception.h  Font.cpp  Font.h  Gui.cpp  Gui.h  Keyboard.cpp  Keyboard.h  MaterialGroup.cpp  MaterialGroup.h  Model.cpp  Model.h  ModelRenderer.cpp  ModelRenderer.h  Part.cpp  Part.h  Platform.cpp  Platform.h  Resource.cpp  Resource.h  Resources.cpp  Resources.h  Sound.cpp  Sound.h  SpriteRenderer.cpp  SpriteRenderer.h  StaticModelCollider.cpp  StaticModelCollider.h  Texture.cpp  (+10 more)
src/qsoft/: Color.h  Debug.cpp  Debug.h  Face.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shadow.cpp  Shadow.h  Texture.cpp  Texture.h  ThreadPool.h  Util.cpp  Util.h  Vector.cpp  Vector.h  Vertex.cpp  Vertex.h  qsoft.h
src/sdl2_platform/: main.cpp
src/sdl_platform/: main.cpp
src/sr1/: memory  noncopyable  shared_ptr  vector  weak_ptr  zero_initialized
src/x11_platform/: main.cpp
